# MicroG

./: CMakeLists.txt  LICENSE  README.md  main.cpp
3rd/Sophus/: SophusConfig.cmake  SophusConfigVersion.cmake  SophusTargets.cmake
3rd/sophus/: SophusConfig.cmake  SophusConfigVersion.cmake  SophusTargets.cmake
include/: AndersonAcceleration.h  MicroG.h  bavoxel.hpp  evaluation.hpp  finereg.h  gror.hpp  ia_gror.h  opt.hpp  prepro.h  tools.hpp
src/: MicroG.cpp  finereg.cpp  prepro.cpp
